--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Athn Website|Welcome</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="math">
+    <link rel="stylesheet" href="reading">
 </head>
 
 <body>
@@ -56,7 +57,7 @@
             </div>
             <div class="box">
                 <h3>Reading</h3>
-                <img src="../img/reading.png">
+                <img src="./img/Reading.png">
                 <p>Reading is the complex cognitive process of decoding symbols to derive meaning. It is a form of language processing.</p>
 
             </div>
